# botwr

./: .gitignore  Dockerfile  README.md  botwr.opam  dune  dune-project
files/: app.js  custom.scss  dune  index.html
scripts/: deploy.sh
src/: app.ml  backpack.ml  card.ml  choices.ml  clicker.ml  dune  env.ml  header.ml  kitchen.ml  set_all.ml  share.ml  stepper.ml  switch.ml  utils.ml
src/bootstrap/: basic.ml  dune  icon.ml  local_storage.ml
src/recipes/: blob.ml  combinations.ml  compression.ml  cooking.ml  dune  game.ml  glossary.ml  ingredient.ml  items.ml  optimize.ml  test.ml  test_compression.ml  test_optimize.ml
